ISIS-2158: deals with some java language deprecations