@@ -51,8 +51,8 @@ public class JavaxValidationDigitsAnnotationFacetFactoryTest extends AbstractFac
         assertNotNull(facet);
         assertTrue(facet instanceof BigDecimalFacetOnPropertyFromJavaxValidationDigitsAnnotation);
         final BigDecimalFacetOnPropertyFromJavaxValidationDigitsAnnotation annotation = (BigDecimalFacetOnPropertyFromJavaxValidationDigitsAnnotation) facet;
-        assertEquals(new Integer(18), annotation.getPrecision());
-        assertEquals(new Integer(4), annotation.getScale());
+        assertEquals(Integer.valueOf(18), annotation.getPrecision());
+        assertEquals(Integer.valueOf(4), annotation.getScale());
     }
 
     public void testAnnotationPickedUpOnActionParameter() {
@@ -73,8 +73,8 @@ public class JavaxValidationDigitsAnnotationFacetFactoryTest extends AbstractFac
         assertNotNull(facet);
         assertTrue(facet instanceof BigDecimalFacetOnParameterFromJavaxValidationDigitsAnnotation);
         final BigDecimalFacetOnParameterFromJavaxValidationDigitsAnnotation annotation = (BigDecimalFacetOnParameterFromJavaxValidationDigitsAnnotation) facet;
-        assertEquals(new Integer(18), annotation.getPrecision());
-        assertEquals(new Integer(4), annotation.getScale());
+        assertEquals(Integer.valueOf(18), annotation.getPrecision());
+        assertEquals(Integer.valueOf(4), annotation.getScale());
     }
 
 }
